Fix a minor CSS bug that caused horizontal scroll in the chat.

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -57,7 +57,6 @@ body {
 	border-bottom:1px solid lightgray;
 }
 #chat > #chat-scroll > .chat-info {
-	width:100%;
 	text-align:center;
 	font-weight:700;
 	color:gray;
